# RobustGPUIndexing

./: .gitmodules  CMakeLists.txt
baselines/: DyCuckoo.patch
benchmarks/: CMakeLists.txt  chainhashtable_erase_bench.cu  chainhashtable_insert_find_bench.cu  chainht_erase_bench.cu  chainht_insert_find_bench.cu  fixedhashtable_bench.cu  fixedhashtable_mix_bench.cu  hashtable_erase_bench.cu  hashtable_insert_find_bench.cu  linearhashtable_bench.cu  linearhashtable_erase_bench.cu  linearhashtable_insert_find_bench.cu  linearhashtable_mix_bench.cu  masstree_bench.cu  masstree_erase_bench.cu  masstree_insert_find_bench.cu  masstree_mix_bench.cu  masstree_range_bench.cu  masstree_scan_bench.cu
evaluation/: CMakeLists.txt  adapter_util.hpp  cpu_libcuckoo_adapter.hpp  generate_workload.hpp  gpu_blink_tree_adapter.hpp  gpu_chainhashtable_adapter.hpp  gpu_cuckoohashtable_adapter.hpp  gpu_dycuckoo_adapter.hpp  gpu_dycuckoo_backend.hpp  gpu_dycuckoo_dynamic.cu  gpu_dycuckoo_dynamic_lock.cu  gpu_linearhashtable_adapter.hpp  gpu_masstree_adapter.hpp  helper_cuda.h  helper_functions.h  prepare_baselines.sh  universal_bench.cu  universal_bench_cpu.cpp
evaluation/scripts/: evaluate.py  exp1.py  measure_cpu.py  measure_gpu.py  plot.py
include/: CMakeLists.txt  btree_kernels.hpp  chainhashtable_node.hpp  chainht_bucket.hpp  cmd.hpp  compute_hash.hpp  dynamic_stack.hpp  gpu_blink_tree.hpp  gpu_btree.h  gpu_chainhashtable.hpp  gpu_chainht.hpp  gpu_cuckoohashtable.hpp  gpu_index.h  gpu_linearhashtable.hpp  gpu_masstree.hpp  gpu_masstree_impl.hpp  gpu_versioned_blink_tree.hpp  hashtable_node.hpp  hashtable_node_subwarp.hpp  hashtable_node_warp.hpp  kernels.hpp  macros.hpp  masstree_kernels.hpp  masstree_node.hpp  masstree_node_subwarp.hpp  masstree_node_warp.hpp  masstree_suffix.hpp  nodes.hpp  rkg.hpp  simple_bump_alloc.hpp  simple_bump_linear_alloc.hpp  simple_debr_reclaim.hpp  simple_debra_reclaim.hpp  simple_dummy_reclaim.hpp  simple_hidebra_reclaim.hpp  simple_slab_alloc.hpp  simple_slab_linear_alloc.hpp  suffix.hpp  suffix_node_subwarp.hpp  suffix_node_warp.hpp  (+2 more)
test/: CMakeLists.txt  unittest_chainhashtable.cu  unittest_chainht.cu  unittest_fixedhashtable.cu  unittest_hashtable.cu  unittest_linearhashtable.cu  unittest_masstree.cu
